# My-Tele-PA

./: .coverage  .env.example  .gitignore  Dockerfile  Documentation.md  Makefile  README.md  cloudbuild.yaml  fly.toml  improvementv3.md  patch_test.py  patch_test2.py  populate_db.py  pyproject.toml  sim_avg_test.py  sim_query_test.py  simulate_query.py  simulation.py  test_db.py  test_eval.py  test_instructor.py  test_mood_journal.py  test_sqlite_direct.py
alembic/: env.py
alembic/versions/: 885449d573dc_initial_schema.py  c8bbc471682e_add_source_column_and_indexes.py
src/life_os/agent/: graph.py  state.py
src/life_os/agent/nodes/: classifier.py  extractor.py  guard.py  persister.py  query.py
src/life_os/agent/prompts/: extract.txt
src/life_os/config/: clients.py  logging.py  settings.py
src/life_os/evals/: metrics.py  run_evals.py
src/life_os/evals/datasets/: extraction.jsonl
src/life_os/integrations/: bigquery_store.py  notion_store.py  sqlite_store.py
src/life_os/models/: guardrails.py  tasks.py  wellness.py
src/life_os/telegram/: bot.py  jobs.py
tests/: conftest.py
tests/e2e/: test_apple_health_ingest.py  test_flows.py
tests/integration/: test_graph_flow.py
tests/unit/: test_apple_health.py  test_classifier.py  test_extractor.py  test_notion_blocks.py  test_persister.py  test_query.py  test_sqlite_roundtrip.py  test_wellness_models.py
