[project]
name = "life-os-agent"
version = "2.0.0"
description = "Personal AI wellness & life tracking agent via Telegram"
requires-python = ">=3.11"

dependencies = [
    # ── Core agent ──────────────────────────────────────────────────────
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",   # MCP bridge (optional feature)
    "openai>=1.40.0",
    "instructor>=1.4.0",               # Structured LLM outputs
    "pydantic>=2.8.0",                 # Data validation
    "pydantic-settings>=2.4.0",        # Config from env vars
    # ── Telegram ─────────────────────────────────────────────────────────
    "python-telegram-bot[job-queue,webhooks]>=21.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ── Storage ──────────────────────────────────────────────────────────
    "aiosqlite>=0.20.0",               # Async SQLite (always-on store)
    "alembic>=1.13.0",                 # DB migrations
    "pandas>=2.2.0",                   # Streak analytics
    # ── Scheduling ───────────────────────────────────────────────────────
    "apscheduler>=3.10.0",
    # ── Integrations (optional, feature-flagged) ──────────────────────
    "notion-client>=2.2.0",            # Notion SDK (if ENABLE_NOTION=true)
    "google-api-python-client>=2.140.0", # GCal (if ENABLE_GCAL=true)
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # ── Observability ────────────────────────────────────────────────────
    "structlog>=24.4.0",               # JSON structured logging
    "langsmith>=0.1.0",                # LangGraph tracing (optional)
    # ── Resilience ───────────────────────────────────────────────────────
    "tenacity>=9.0.0",                 # Retry logic
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "langgraph-checkpoint>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",       # async test client
    "respx>=0.21.0",       # mock httpx
    "black",
    "ruff",
    "mypy",
]

[tool.uv]
dev-dependencies = ["life-os-agent[dev]"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","N","UP","ANN","S","B","SIM"]
ignore = ["ANN101","ANN102", "ANN201", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]
"src/life_os/evals/*" = ["S101", "ANN", "SIM", "B"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"
